feat: sales and customer entity with related CRUD endpoints (#16)
* feat: customer entity and related CRUD

* feat: sale entities and crud endpoints

* chore: formating
