# src/main/java/hei/school/demo/repository/model/JSale.java
@@ -1,0 +1,59 @@
+package hei.school.demo.repository.model;
+
+import hei.school.demo.entity.enums.PaymentMethod;
+import hei.school.demo.entity.enums.SaleStatus;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.UUID;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+@Entity
+@Table(name = "sale")
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+public class JSale {
+
+  @Id
+  @GeneratedValue(strategy = GenerationType.UUID)
+  private UUID id;
+
+  @ManyToOne
+  @JoinColumn(name = "customer_id", nullable = false)
+  private JCustomer customer;
+
+  @Column(name = "sale_date", nullable = false)
+  private LocalDate saleDate;
+
+  @Enumerated(EnumType.STRING)
+  @Column(name = "status", nullable = false)
+  private SaleStatus status;
+
+  @Enumerated(EnumType.STRING)
+  @Column(name = "payment_method", nullable = false)
+  private PaymentMethod paymentMethod;
+
+  @Column(name = "total_amount", nullable = false)
+  private Double totalAmount;
+
+  @OneToMany(mappedBy = "sale", cascade = CascadeType.ALL, orphanRemoval = true)
+  @ToString.Exclude
+  @EqualsAndHashCode.Exclude
+  private List<JSaleItem> items;
+}
